# tango_motors_control

./: .gitignore  mypy.ini  pyproject.toml  readme.md  requirements.txt
scripts/: kill_kiosk.sh  setup_kiosk.sh
src/: app.py  main.py
src/assets/lang/: en.json  fr.json
src/components/: admin_view.py  app.py  counter_view.py  main_view.py  navigation.py  screensaver.py  speed_view.py
src/components/admin/: admin_view.py  auth_view.py
src/components/main/: main_view.py  motors_view.py
src/components/native/: button.py  card.py  icon_button.py  nav_item.py  section_header.py  tag.py  toast.py
src/components/shared/: app_body.py  layout.py  loading_spinner.py  navigation.py  numpad.py  screensaver.py  toast.py
src/components/shell/: activity_boundary.py  app_body.py  layout.py  loading_spinner.py  navigation.py  screensaver.py
src/components/ui/: button.py  card.py  icon_button.py  numpad.py  page.py  passcode_indicator.py  sheet.py  slider.py  text.py  toast.py
src/contexts/: locale.py  motor.py  route.py  settings.py  shell.py  theme.py
src/models/: app_model.py  controls.py  motor_types.py  nav_item.py
src/services/app/: i18n.py  navigation.py  overlay_registry.py  runtime.py  settings.py  shell.py
src/services/motors/: __init__.py  controller.py  motor_service.py  plate_speed.py  speed_ramp.py  tray_speed.py
src/services/safety/: sensor_service.py
src/theme/: animation.py  builder.py  colors.py  radius.py  scale.py  shadows.py  spacing.py  typography.py
src/utils/: config.py  logging_config.py
storage/: data.template
(+7 files in other folders)
