[project]
name = "tango-motors-control"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "samor", email = "samor140@hotmail.com" }
]
dependencies = [
  "flet>=0.80.1"
]

[dependency-groups]
dev = [
  "flet[all]>=0.80.1",
  "pyinstaller",
]

[tool.flet]
org = "com.mycompany"
product = "tango-motors-control"
company = "Regethermic - Canada"
copyright = "Copyright (C) 2026 by Regethermic"

[tool.flet.app]
path = "src"
